# GeunHwang

app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  CompactClassificationModel.c  native-lib.cpp
app/src/main/cpp/features/: FFTImplementationCallback.c  abs.c  corrcoef.c  feature_extractor_codegen.c  feature_extractor_codegen_emxutil.c  feature_extractor_codegen_types.h  findpeaks.c  geomean.c  gradient.c  heapsort.c  insertionsort.c  introsort.c  mean.c  minOrMax.c  pca.c  periodogram.c  rms.c  sqrt.c  sum.c  trapz.c  xaxpy.c  xzlangeM.c  xzlascl.c  xzsvdc.c
app/src/main/cpp/prediction/: CompactClassificationEnsemble.c  CompactClassificationEnsemble.h  predict_exercise.c  predict_exercise.h
app/src/main/java/com/example/geunhwang/presentation/core/: WorkoutEntities.kt
app/src/main/java/com/example/geunhwang/presentation/data/: SensorDataLogger.kt
app/src/main/java/com/example/geunhwang/presentation/data/local/: AppDatabase.kt  WorkoutDao.kt  WorkoutSet.kt
app/src/main/java/com/example/geunhwang/presentation/data/repository/: SensorRepository.kt  WorkoutRepository.kt
app/src/main/java/com/example/geunhwang/presentation/ui/: MainActivity.kt  MainViewModel.kt
app/src/main/java/com/example/geunhwang/presentation/ui/screens/: ExerciseSelectionScreen.kt  LogbookScreen.kt  LoggingScreen.kt  MainScreen.kt  WorkoutScreen.kt
app/src/main/java/com/example/geunhwang/presentation/ui/theme/: Theme.kt
